--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,10 +1,20 @@
-<div class="row">
-  <div class="shadow-lg col-sm-3 p-2">
-    <div class="card">
-      <img class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
-      <div class="card-body p-2">
+<div class="card">
+  <div class="card-img-wrapper">
+   <img class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
+   <ul class="list-inline text-center member-icons animate">
+     <li class="list-inline-item">
+       <button class="btn btn-primary"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+     </li>
+     <li class="list-inline-item">
+      <button class="btn btn-primary"><i class="fa fa-address-book-o" aria-hidden="true"></i></button>
+    </li>
+   </ul>
+  </div>
+   <div class="card-body p-2">
+      <h1>{{property.Name}}</h1>
+      <h2>{{property.Type}}</h2>
+      <h3>{{property.Price}}</h3>
+   </div>
 
-      </div>
-    </div>
 </div>
-</div>
+
