--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,9 +1,10 @@
 <div class="card">
   <div class="card-img-wrapper">
-   <img class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
+   <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg" alt="Card image cap">
+   <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
    <ul class="list-inline text-center member-icons animate">
      <li class="list-inline-item">
-       <button class="btn btn-primary"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+       <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
      </li>
      <li class="list-inline-item">
       <button class="btn btn-primary"><i class="fa fa-address-book-o" aria-hidden="true"></i></button>
