--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -9,7 +9,8 @@
           <div class="form-group col-12">
             <label for="Name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName?.valid && userName?.touched" class="error-block">
+
+            <span *ngIf="!userName?.valid && (userName?.touched || userSubmitted)" class="error-block">
               Please Provide Name
             </span>
           </div><br>
@@ -17,7 +18,8 @@
           <div class="form-group col-12">
             <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" formControlName="email">
-            <span *ngIf="!email?.valid && email?.touched" class="error-block">
+
+            <span *ngIf="!email?.valid && (email?.touched || userSubmitted)" class="error-block">
               <span *ngIf="email?.hasError('required')">Please Provide Email</span>
               <span *ngIf="email.errors?.['email']">Please Provide Valid Email Id</span>
             </span>
@@ -26,7 +28,8 @@
           <div class="form-group col-12">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" formControlName="password">
-            <span *ngIf="!password?.valid && password?.touched" class="error-block">
+
+            <span *ngIf="!password?.valid && (password?.touched || userSubmitted)" class="error-block">
               <span *ngIf="password?.hasError('required')">Please Provide Password</span>
               <span *ngIf="password?.hasError('minlength')">Password should have atleast 8 character</span>
             </span>
@@ -35,7 +38,8 @@
           <div class="form-group col-12">
             <label for="cpassword" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" formControlName="confirmPassword">
-            <span *ngIf="!confirmPassword?.valid && confirmPassword?.touched" class="error-block">
+
+            <span *ngIf="!confirmPassword?.valid && (confirmPassword?.touched || userSubmitted)" class="error-block">
               <span *ngIf="confirmPassword?.hasError('required')">Please Confirm Password</span>
             </span>
             <span *ngIf="registrationForm.hasError('notmatched') && confirmPassword.valid" class="error-block">Password not matched</span>
@@ -44,7 +48,8 @@
           <div class="form-group col-12">
             <label for="mobile" class="form-label">Mobile</label>
             <input type="text" class="form-control" formControlName="mobile">
-            <span *ngIf="!mobile?.valid && mobile?.touched" class="error-block">
+
+            <span *ngIf="!mobile?.valid && (mobile?.touched || userSubmitted)" class="error-block">
               <span *ngIf="mobile?.hasError('required')">Please Provide Mobile Number</span>
               <span *ngIf="mobile?.hasError('maxlength')">Mobile Number must be of 10 digit</span>
             </span>
