--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -19,12 +19,27 @@
 
       <div>
         <ul class="nav navbar-nav">
-          <li class="nav-item">
+          <li *ngIf="!loggedIn()" class="nav-item">
             <a class="nav-link" routerLink="user/register" routerLinkActive="active">Register</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="!loggedIn()" class="nav-item">
             <a class="nav-link" routerLink="user/login" routerLinkActive="active">Login</a>
           </li>
+          <!-- <li *ngIf="loogedIn()" class="nav-item">
+            <a class="nav-link" (click)="onLogout()">Logout</a>
+          </li> -->
+
+          <div style="margin-right: 30px;" *ngIf="loggedIn()" class="dropdown" dropdown>
+            <a class="dropdown-toggle text-light" dropdownToggle (click)="false">
+              Welcome {{loggedInUser}}
+            </a>
+            <div class="dropdown-menu" *dropdownMenu>
+              <a class="dropdown-item"><i class="fa fa-tachometer"> View Dashboard</i></a>
+              <a class="dropdown-item"><i class="fa fa-user-circle"> My Profile</i></a>
+              <a class="dropdown-item"><i class="fa fa-key"> Change Password</i></a>
+              <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out"> Logout</i></a>
+            </div>
+          </div>
         </ul>
       </div>
     </div>
