--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -1,32 +1,163 @@
 <div class="card">
-  <div class="card-header">
-    Add New Property
+  <div class="card-header text-white">
+    List Your Property
   </div>
   <div class="card-body">
     <form (submit)="onSubmit()" #addPropertyForm="ngForm">
-      <div class="form-group col-12">
-        <label for="Name">Name</label>
-        <input type="text" #propName="ngModel" class="form-control" ngModel name="Name" required>
-        <span *ngIf="!propName.valid && propName.touched" class="error-block">Please provide Name</span>
-      </div><br>
+      <div>
+        <tabset #formTabs>
 
-      <div class="form-group col-12">
-        <label for="type">Type</label>
-        <input type="text" class="form-control" #propType="ngModel" ngModel name="Type" required minlength="4" maxlength="10">
-        <span *ngIf="!propType.valid && propType.touched" class="error-block">
-          <span *ngIf="propType.errors?.['minlength']">should be having atleast 4 character</span>
-          <span *ngIf="propType.errors?.['maxlength']">Type should be having maximum 10 character</span>
-      </span>
-      </div><br>
+          <!-- tab for Pricing and Area -->
+          <tab heading="Basic info">
+            <div class="form-group col-12">
+              <label for="Name">Name</label>
+              <input type="text" #propName="ngModel" class="form-control" ngModel name="Name" required>
+              <span *ngIf="!propName.valid && propName.touched" class="error-block">Please provide Name</span>
+            </div><br>
 
-      <div class="form-group col-12">
-        <label for="price">Price</label>
-        <input type="text" class="form-control" ngModel name="Price">
-      </div><br>
+            <div class="form-group col-12">
+              <label for="type">Type</label>
+              <input type="text" class="form-control" #propType="ngModel" ngModel name="Type" required minlength="4" maxlength="10">
+              <span *ngIf="!propType.valid && propType.touched" class="error-block">
+                <span *ngIf="propType.errors?.['minlength']">should be having atleast 4 character</span>
+                <span *ngIf="propType.errors?.['maxlength']">Type should be having maximum 10 character</span>
+            </span>
+            </div><br>
 
-      <div class="form-group col-12">
-        <button type="submit" [disabled]="!addPropertyForm.valid" class="btn btn-primary">Save</button>
-        <button type="reset" class="btn btn-primary m-2">Cancel</button>
+            <div class="form-group col-12">
+              <label for="price">Price</label>
+              <input type="text" class="form-control" ngModel name="Price">
+            </div><br>
+
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-primary col-12 m-1" (click)="selectTab(1)">Next</button>
+            </div>
+          </tab>
+          <!-- tab for Pricing and Area -->
+          <tab heading="Pricing and Area">
+            Pricing Information
+
+              <div class="form-group col-12">
+                <label>Price (in USD)</label>
+                <input type="text" class="form-control">
+              </div>
+
+              <div class="form-group col-12">
+                <label>Security (in USD)</label>
+                <input type="text" class="form-control">
+              </div>
+
+              <div class="form-group col-12">
+                <label>Maintenance (in USD)</label>
+                <input type="text" class="form-control">
+              </div>
+
+              <div class="form-group col-12">
+                <label>Built Area (in Sqr Feet)</label>
+                <input type="text" class="form-control">
+              </div>
+
+              <div class="form-group col-12">
+                <label>Carpet Area(in Sqr Feet)</label>
+                <input type="text" class="form-control">
+              </div>
+
+              <div class="form-group col-12">
+                <button type="button" class="btn btn-primary col-12 m-1" (click)="selectTab(2)">Next</button>
+                <button type="button" class="btn btn-secondary col-12 m-1" (click)="selectTab(0)">Back</button>
+              </div>
+          </tab>
+
+          <!-- tab for Address -->
+          <tab heading="Address">
+            Address
+
+            <div class="form-group col-12">
+              <label>Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Total Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Address</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Landmark</label>
+              <input type="text" class="form-control">
+            </div>
+
+              <div class="form-group col-12">
+                <button type="button" class="btn btn-primary col-12 m-1" (click)="selectTab(3)">Next</button>
+                <button type="button" class="btn btn-secondary col-12 m-1" (click)="selectTab(1)">Back</button>
+          </div>
+          </tab>
+
+            <!-- tab for Other details -->
+          <tab heading="Other details">
+            Other Detalis
+
+            <div class="form-group col-12">
+              <label>Ready to Move</label><br/>
+              <input type="radio" id='Yes' value='1' name="RTM">
+              <label class="m-2">Yes</label>
+
+              <input type="radio" id="No" value='2' name="RTM">
+              <label class="m-2">No</label>
+            </div>
+
+            <div class="form-group col-3">
+              <label>Possession/Avaialble From</label>
+              <input type="date" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Age of Property</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Gated Community</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Main Entrance</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Description</label>
+              <textarea type="text" class="form-control" rows="6"></textarea>
+            </div>
+
+            <div class="form-group col-12">
+                <button type="button" class="btn btn-primary col-12 m-1" (click)="selectTab(4)">Next</button>
+                <button type="button" class="btn btn-secondary col-12 m-1" (click)="selectTab(2)">Back</button>
+             </div>
+          </tab>
+
+          <!-- tab for Uploading Photo -->
+          <tab heading="Photos">
+            Upload photos
+
+            <div class="form-group col-12">
+              <div class="photo-control">
+                  <button class="mt-5" type="button">Upload</button> <br>
+                  This is under construction
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-secondary col-12 m-1" (click)="selectTab(3)">Back</button>
+            </div>
+            </tab>
+        </tabset>
       </div>
     </form>
   </div>
