--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -9,6 +9,26 @@
 
           <!-- tab for Pricing and Area -->
           <tab heading="Basic info">
+          <div class="row">
+            <div class="col-auto">
+            <div class="form-group col-12">
+              <p class="m-2">I want to</p>
+              <div class="btn-group" btnRadioGroup>
+                <label class="btn btn-outline-primary mb-2" btnRadio="1" role="button" name="SellRent">Sell</label>
+                <label class="btn btn-outline-primary mb-2" btnRadio="2" role="button" name="SellRent">Rent</label>
+              </div>
+            </div>
+          </div>
+          <div class="col-auto">
+            <div class="form-group col-12">
+              <p class="m-2">BHK</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let bhk of [1,2,3,4]" class="btn btn-outline-primary mr-2" btnRadio="{{bhk}}" tabindex="0" role="button" name="SellRent">{{bhk}}</label>
+              </div>
+            </div>
+          </div>
+          </div>
+
             <div class="form-group col-12">
               <label for="Name">Name</label>
               <input type="text" #propName="ngModel" class="form-control" ngModel name="Name" required>
@@ -33,6 +53,7 @@
               <button type="button" class="btn btn-primary col-12 m-1" (click)="selectTab(1)">Next</button>
             </div>
           </tab>
+
           <!-- tab for Pricing and Area -->
           <tab heading="Pricing and Area">
             Pricing Information
@@ -155,6 +176,8 @@
 
             <div class="form-group col-12">
               <button type="button" class="btn btn-secondary col-12 m-1" (click)="selectTab(3)">Back</button>
+              <button type="submit" class="btn btn-danger col-12 m-1">Cancel</button>
+              <button type="reset" class="btn btn-primary col-12 m-1">Save</button>
             </div>
             </tab>
         </tabset>
