--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,21 +1,39 @@
+<!-- card is copied from bootstrap -->
 <div class="card">
   <div class="card-img-wrapper">
-   <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg" alt="Card image cap">
-   <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
-   <ul class="list-inline text-center member-icons animate">
-     <li class="list-inline-item">
-       <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
-     </li>
-     <li class="list-inline-item">
-      <button class="btn btn-primary"><i class="fa fa-address-book-o" aria-hidden="true"></i></button>
-    </li>
-   </ul>
+
+    <!-- here if img is there in data source then that img will shown otherwise default img will shown -->
+    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg" alt="Card image cap">
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house_Default.png" alt="Card image cap">
+
+    <ul class="list-inline text-center member-icons animate" *ngIf="!hideIcons">
+      <li class="list-inline-item">
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-address-book-o" aria-hidden="true"></i></button>
+      </li>
+    </ul>
+
   </div>
-   <div class="card-body p-2">
-      <h1>{{property.Name}}</h1>
-      <h2>{{property.Type}}</h2>
-      <h3>{{property.Price}}</h3>
-   </div>
+  <div class="card-body p-2">
+    <h1 class="mb-0">{{property.BHK}} BHK {{property.PType}}</h1>
+
+    in {{property.Name}}
+    <span *ngIf="property.Name">,</span>
+    {{property.City}}
+
+    <h6 class="mt-2">{{property.FType}}
+      <span *ngIf="property.FType !== 'Unfurnished'">Furnished</span>
+      <span *ngIf="property.RTM"> | Ready to Move</span>
+      <span *ngIf="!property.RTM"></span>
+      </h6>
+
+      <hr class="mt-0 mb-2">
+
+      <h6 class="mb-0">Price: <span class="font-highlight">{{property.Price}} USD.</span> |
+        Area:  <span class="font-highlight">{{property.BuildingArea}} Sq Ft </span> </h6>
+  </div>
 
 </div>
 
