--- a/src/app/property/property-list/property-list.component.html
+++ b/src/app/property/property-list/property-list.component.html
@@ -3,3 +3,5 @@
     <app-property-card [property]="property"></app-property-card>
   </div>
 </div>
+
+<!-- here [property] is a property(variable) defined in a child (property-card) component and asign [property] with some value-->
