--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container" style="margin: 70px;">
+<div class="container" style="margin-top: 70px;">
    <router-outlet></router-outlet>
 </div>
 
