--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -1,11 +1,15 @@
 <div class="row">
   <div class="col-6 m-auto">
     <div class="card m-auto">
-      <div class="card-header">
+
+      <div class="card-header text-white">
         Login
       </div>
+
       <div class="card-body">
+
         <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm)">
+
           <div class="form-group col-12">
             <label>Name</label>
             <input class="form-control" formControlName="userName">
@@ -14,13 +18,13 @@
 
           <div class="form-group col-12">
             <label>Password</label>
-            <input class="form-control" formControlName="password">
+            <input class="form-control" formControlName="password" type="password">
             <span *ngIf="!this.loginForm.get('password')?.valid && this.loginForm.get('password')?.touched" class="error-block">Please enter Password</span>
           </div>
 
           <div class="form-group col-12">
             <button type="submit" class="btn btn-primary m-2" [disabled]="!loginForm.valid">Submit</button>
-            <button type="button" class="btn btn-secondary m-2">Cancel</button>
+            <button type="button" (click)="onCancle()" class="btn btn-secondary m-2">Cancel</button>
           </div>
         </form>
       </div>
