--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -1,15 +1,18 @@
 <div class="row">
   <div class="col-6 m-auto">
     <div class="card m-auto">
-      <div class="card-header">
+
+      <div class="card-header text-white">
         Register
       </div>
+
       <div class="card-body">
+
         <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+
           <div class="form-group col-12">
             <label for="Name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-
             <span *ngIf="!userName?.valid && (userName?.touched || userSubmitted)" class="error-block">
               Please Provide Name
             </span>
@@ -57,7 +60,7 @@
 
           <div class="form-group col-12">
             <button type="submit" class="btn btn-primary" [disabled]="!registrationForm.valid">Save</button>
-            <button type="reset" class="btn btn-primary m-2">Cancel</button>
+            <button type="reset" (click)="onCancle()" class="btn btn-primary m-2">Cancel</button>
           </div>
         </form>
       </div>
